# 2DConvolutionsLibrary

./: 2DLib.cpp  2DLib.h  CMakeLists.txt  README.md  convAbs.cpp  convAbs.h  main.cpp  multi.cpp  multi.h  output.h  shared.cpp  shared.h  single.cpp  single.h  thread_data.h
build_opencv/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_config.cmake  setup_vars.sh
build_opencv/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/apps/model-diagnostics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/apps/visualisation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.simd_declarations.hpp  undistort.sse2.cpp
build_opencv/modules/core/: CTestTestfile.cmake  Makefile  arithm.avx2.cpp  arithm.simd_declarations.hpp  cmake_install.cmake  convert.simd_declarations.hpp  convert.vsx3.cpp  convert_scale.simd_declarations.hpp  convert_scale.sse2.cpp  count_non_zero.avx2.cpp  count_non_zero.simd_declarations.hpp  mathfuncs_core.avx.cpp  mathfuncs_core.simd_declarations.hpp  matmul.avx2.cpp  matmul.simd_declarations.hpp  mean.simd_declarations.hpp  mean.sse2.cpp  merge.avx2.cpp  merge.simd_declarations.hpp  split.simd_declarations.hpp  split.sse2.cpp  stat.simd_declarations.hpp  stat.sse4_2.cpp  sum.simd_declarations.hpp  sum.sse2.cpp  version_string.inc
build_opencv/modules/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sift.avx512_skx.cpp  sift.simd_declarations.hpp
build_opencv/modules/flann/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/gapi/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/highgui/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/imgcodecs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.avx.cpp  accum.simd_declarations.hpp  bilateral_filter.avx2.cpp  bilateral_filter.simd_declarations.hpp  box_filter.avx2.cpp  box_filter.simd_declarations.hpp  cmake_install.cmake  color_hsv.avx2.cpp  color_hsv.simd_declarations.hpp  color_rgb.avx2.cpp  color_rgb.simd_declarations.hpp  color_yuv.avx2.cpp  color_yuv.simd_declarations.hpp  filter.avx2.cpp  filter.simd_declarations.hpp  median_blur.avx2.cpp  median_blur.simd_declarations.hpp  morph.simd_declarations.hpp  morph.sse2.cpp  smooth.simd_declarations.hpp  smooth.sse4_1.cpp  sumpixels.simd_declarations.hpp  sumpixels.sse2.cpp
build_opencv/modules/java_bindings_generator/: CTestTestfile.cmake  Makefile  gen_java.json
build_opencv/modules/js_bindings_generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  headers.txt
build_opencv/modules/ml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/objc_bindings_generator/: CTestTestfile.cmake  Makefile  gen_objc.json
build_opencv/modules/objdetect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/photo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/python2/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/python_bindings_generator/: CTestTestfile.cmake  Makefile  headers.txt  pyopencv_custom_headers.h  pyopencv_generated_enums.h  pyopencv_generated_funcs.h  pyopencv_generated_include.h  pyopencv_generated_modules_content.h  pyopencv_generated_types.h  pyopencv_generated_types_content.h  pyopencv_signatures.json
build_opencv/modules/python_tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/stitching/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/ts/: CTestTestfile.cmake  Makefile
build_opencv/modules/video/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/modules/videoio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/python_loader/cv2/: config-2.7.py  config.py
build_opencv/samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/samples/cpp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/samples/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/samples/gpu/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_opencv/samples/opencl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+103 files in other folders)
